test Coq master in CI

--- a/.github/workflows/docker-action.yml
+++ b/.github/workflows/docker-action.yml
@@ -15,6 +15,7 @@ jobs:
     strategy:
       matrix:
         image:
+          - 'coqorg/coq:dev'
           - 'coqorg/coq:8.17'
       fail-fast: false
     steps:
